# Chahlie

./: .env.deck.example  .env.example  .gitignore  CHAHLIE_TAURI.md  CHANGELOG.md  CONTRIBUTING.md  README.md  STEAM_DECK.md  chahlie-tools.html  index.html  pyproject.toml  requirements-deck.txt  requirements-tauri.txt  requirements.txt  run.bat  run.py  setup.py  test_deck_setup.py  test_deck_tools.py  test_deck_voice.py  test_llama_proxy.py  test_memory.py  test_perf_patch.py  test_tauri_server.py  test_v22.py  test_v23.py  test_v232_speed_pass.py  test_v24_juice.py  test_verifier.py  test_voice_wav.py
.cursor/rules/: chahlie.mdc
.github/workflows/: pages.yml  release-deck.yml  release-tauri.yml
chahlie/: __init__.py  __main__.py  agent.py  config.py  context_manager.py  deck_setup.py  deck_tools.py  deck_ui.py  differ.py  fuzzy.py  llama_proxy.py  personality.py  planner.py  plugins.py  project_primer.py  retry_hints.py  subagent.py  tauri_server.py  theme.py  tools.py  transaction.py  tui.py  ui.py  verifier.py  voice.py
chahlie-tauri/: index.html  package-lock.json  package.json
chahlie-tauri/src-tauri/: Cargo.toml  tauri.conf.json
docs/: README.md  index.html
release/: DECK-INSTALL.txt  INSTALL.txt  Launch-Chahlie-Tauri.sh  PASTE-IN-KONSOLE-TAURI.sh  PASTE-IN-KONSOLE.sh  README-FIRST.txt  START-CHAHLIE.sh  Start Chahlie.desktop  Start-Chahlie-Tauri.sh  install.sh  run-chahlie-deck.sh
scripts/: build-deck-release.sh  build-tauri-release.sh  chahlie-deck.sh  install-steam-deck.sh  install-tauri-deck.sh  patch-tauri-appimage-deck.sh
(+13 files in other folders)
